--- a/ReadMe
+++ b/ReadMe
@@ -9,3 +9,6 @@ to get to the firmware! I will be documenting the progress I make on
 this repo, which will include photos and videos of the process.
 
 **Faces and Figures:** Front Beauty, but behind both are unique purposes.
+
+#Day 1 (Disassembly)
+https://youtu.be/ZydvrHb4HtM
