--- a/ReadMe
+++ b/ReadMe
@@ -12,3 +12,7 @@ this repo, which will include photos and videos of the process.
 
 #Day 1 (Disassembly)
 https://youtu.be/ZydvrHb4HtM
+
+
+#Day 2 (Identifying Components)
+https://youtu.be/s3JbYjvWQEg
